# Platypus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-dependencies.sh  build-test.sh  compile-header-file.sh
platypus/assets/: Asset.cpp  Asset.h  Asset.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  CMakeLists.txt  Font.cpp  Font.h  Font.hpp  Image.cpp  Image.h  Image.hpp  Material.cpp  Material.h  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.h  Model.hpp  SkeletalAnimationData.cpp  SkeletalAnimationData.h  SkeletalAnimationData.hpp  TerrainMaterial.cpp  TerrainMaterial.hpp  TerrainMesh.cpp  TerrainMesh.hpp  Texture.cpp  Texture.h  Texture.hpp
platypus/assets/deprecated/: TerrainMesh.cpp  TerrainMesh.hpp
platypus/assets/platform/: CMakeLists.txt
platypus/assets/platform/desktop/: CMakeLists.txt  DesktopTexture.cpp  DesktopTexture.h  DesktopTexture.hpp
platypus/assets/platform/web/: CMakeLists.txt  WebTexture.cpp  WebTexture.h  WebTexture.hpp
platypus/core/: Application.cpp  Application.h  Application.hpp  CMakeLists.txt  Debug.cpp  Debug.h  Debug.hpp  InputEvent.hpp  InputManager.cpp  InputManager.h  InputManager.hpp  Memory.cpp  Memory.h  Memory.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  Serialization.cpp  Serialization.hpp  Timing.cpp  Timing.hpp  Window.h  Window.hpp
platypus/core/platform/desktop/: CMakeLists.txt  DesktopInputManager.cpp  DesktopWindow.cpp  DesktopWindow.h  DesktopWindow.hpp
platypus/core/platform/web/: CMakeLists.txt  WebInputManager.cpp  WebWindow.cpp
platypus/utils/: Algorithms.cpp  Algorithms.hpp  AnimationDataUtils.h  AnimationDataUtils.hpp  CMakeLists.txt  FileUtils.cpp  FileUtils.h  FileUtils.hpp  ID.cpp  ID.h  ID.hpp  Maths.cpp  Maths.h  Maths.hpp  ModelLoading.cpp  ModelLoading.h  SkeletalAnimationData.h  StringUtils.cpp  StringUtils.hpp  UUID.cpp  UUID.hpp
platypus/utils/controllers/: CMakeLists.txt  CameraController.cpp  CameraController.h  CameraController.hpp
platypus/utils/modelLoading/: CMakeLists.txt  GLTFAnimationParsing.cpp  GLTFAnimationParsing.h  GLTFAnimationParsing.hpp  GLTFFileUtils.cpp  GLTFFileUtils.h  GLTFFileUtils.hpp  GLTFSkeletonParsing.cpp  GLTFSkeletonParsing.h  GLTFVertexParsing.cpp  GLTFVertexParsing.h  GLTFVertexParsing.hpp  ModelLoading.cpp  ModelLoading.h  ModelLoading.hpp  RawMeshData.h  RawMeshData.hpp
shaderBuilder/: .gitignore  CMakeLists.txt
shaderBuilder/src/: Main.cpp  ShaderBuilder.cpp  ShaderBuilder.hpp  ShaderFunctions.cpp  ShaderFunctions.hpp
shaderBuilder/templates/: TestTemplate.vert
tests/: .gitignore  CMakeLists.txt  Dockerfile  build-docker.sh  build-test.sh  build-web-assets.sh  docker-compose.yml  nginx.conf  shell.html
tests/assets/: TestCube.glb  TestCube.gltf  TestCubeTangents.glb
tests/assets/shaders/: TestFragmentShader.spv  TestShader.frag  TestShader.vert  TestVertexShader.spv
tests/assets/shaders/desktop/: FontFragmentShader.glsl  FontVertexShader.glsl  GUIFragmentShader.glsl  GUIVertexShader.glsl  PostProcessingFragmentShader.glsl  PostProcessingVertexShader.glsl  SkinnedFragmentShader.glsl  SkinnedFragmentShader_ds.glsl  SkinnedVertexShader.glsl  StaticFragmentShader.glsl  StaticFragmentShader_ds.glsl  StaticFragmentShader_dsa.glsl  StaticFragmentShader_dsn.glsl  StaticFragmentShader_i_ds.glsl  StaticHDFragmentShader.glsl  StaticHDVertexShader.glsl  StaticVertexShader.glsl  StaticVertexShader_i.glsl  StaticVertexShader_t.glsl  StaticVertexShader_tangent.glsl  TerrainFragmentShader.glsl  TerrainFragmentShader_ds.glsl  TerrainFragmentShader_dsn.glsl  TerrainVertexShader.glsl  TerrainVertexShader_tangent.glsl  TestFragmentShader.glsl  TestVertexShader.glsl  compile-shaders.sh
tests/assets/shaders/desktop/postProcessing/: BlurFragmentShader.glsl  ColorFragmentShader.glsl  ColorVertexShader.glsl  HorizontalBlurVertexShader.glsl  ScreenFragmentShader.glsl  ScreenVertexShader.glsl  VerticalBlurVertexShader.glsl
tests/assets/shaders/desktop/receiveShadows/: SkinnedFragmentShader_ds.glsl  SkinnedVertexShader.glsl  StaticFragmentShader_ds.glsl  StaticFragmentShader_dsn.glsl  StaticVertexShader.glsl  StaticVertexShader_i.glsl  TerrainFragmentShader_dsn.glsl  TerrainVertexShader_tangent.glsl
tests/assets/shaders/desktop/shadows/: SkinnedVertexShader.glsl  StaticFragmentShader.glsl  StaticVertexShader.glsl
tests/assets/shaders/desktop/water/: FragmentShader.glsl  VertexShader.glsl
tests/assets/shaders/web/: FontFragmentShader.glsl  GUIFragmentShader.glsl  GUIVertexShader.glsl  PostProcessingFragmentShader.glsl  PostProcessingVertexShader.glsl  SkinnedFragmentShader.glsl  SkinnedFragmentShader_ds.glsl  SkinnedVertexShader.glsl  StaticFragmentShader.glsl  StaticFragmentShader_ds.glsl  StaticFragmentShader_dsa.glsl  StaticFragmentShader_dsn.glsl  StaticHDFragmentShader.glsl  StaticHDVertexShader.glsl  StaticVertexShader.glsl  StaticVertexShader_i.glsl  StaticVertexShader_t.glsl  StaticVertexShader_tangent.glsl  StaticVertexShader_ti.glsl  TerrainFragmentShader.glsl  TerrainFragmentShader_ds.glsl  TerrainFragmentShader_dsn.glsl  TerrainVertexShader.glsl  TerrainVertexShader_tangent.glsl  TestFragmentShader.glsl  TestShader.frag  TestShader.vert  TestVertexShader.glsl
tests/assets/shaders/web/postProcessing/: BlurFragmentShader.glsl  ColorFragmentShader.glsl  (+5 more)
tests/src/: BaseScene.cpp  BaseScene.h  BaseScene.hpp  CMakeLists.txt  HierarchyTestScene.cpp  HierarchyTestScene.h  HierarchyTestScene.hpp  LoadingScreen.cpp  LoadingScreen.hpp  Main.cpp  MaterialTestScene.cpp  MaterialTestScene.h  MaterialTestScene.hpp  MeshSerializationTestScene.cpp  MeshSerializationTestScene.hpp  MeshTestScene.cpp  MeshTestScene.h  OpenglUpgradeTestScene.cpp  OpenglUpgradeTestScene.hpp  ShadowTestScene.cpp  ShadowTestScene.hpp  SkinnedMeshTestScene.cpp  SkinnedMeshTestScene.h  SkinnedMeshTestScene.hpp  TerrainTestScene.cpp  TerrainTestScene.hpp  TestScene.cpp  TestScene.h  UITestScene.cpp  UITestScene.h  UITestScene.hpp  WaterTestScene.cpp  WaterTestScene.hpp
tests/src/deprecated/: TestScene.cpp  TestScene.h
(+200 files in other folders)
